--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,18 @@
       <div class="container">
         <div id="logo" class="navbar-brand"><%= link_to "Tedit", root_path %></div>
         <nav class="collapse navbar-collapse navbar-ex1-collapse">
-        	<% if user_signed_in? -%>
+        	<% if user_signed_in? %>
 						<ul class="nav navbar-nav navbar-right">
 							<li><%= link_to 'Submit link', new_link_path %></li>
 							<li><%= link_to 'Account', edit_user_registration_path %></li>
 							<li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
 						</ul>
-					<% else -%>
+					<% else %>
 						<ul class="nav navbar-nav pull-right">
 							<li><%= link_to 'Sign up', new_user_registration_path %></li>
 							<li><%= link_to 'Sign in', new_user_session_path %></li>
 						</ul>
-					<% end -%>
+					<% end %>
         </nav>
       </div>
     </div>
